@startuml
class InventoryManagementApplication{
    +start()
}

class InventoryManagementApplicationController{
    -getComparator():Comparator<String>
    -displayError(int)
    +initialize()
}

InventoryManagementApplication --o InventoryManagementApplicationController

class Item{
    -serialNumber
    -name
    -monetaryValue
    +Item()
    +getSerialNumber():String
    +getName():String
    +getMonetaryValue():String
    +setSerialNumber(String)
    +setName(String)
    +setMonetaryValue(String)
}

InventoryManagementApplicationController --o Item

class ItemList{
    -ObservableList<Item> mainList
    -int size
    +ItemList()
    +addItem(Item)
    +removeItem(int)
    +getItem(int):Item
    +setItem(int, Item)
    +getSize():int
    +isListEmpty():boolean
    +getList():ObservableList<Item>
    +removeAll()
}

InventoryManagementApplicationController --o ItemList

class FileIO{
    +prepHTML(ItemList):String
    +writeHTML(String, File)
    +readHTML(File, ItemList)
    +writeJson(File, ItemLIst)
    +readJson(File, ItemList)
    +writeTSV(File, ItemList)
    +readTSV(File, ItemList)
}

InventoryManagementApplicationController --o FileIO

class ParseTyping{
    -HashSet<String> usedNumbers
    +isUsed(String):serial
    +removeForEdit(String, int, ItemList)
    +enforceSerialNumber(String):boolean
    +enforceName(String):boolean
    +enforceMonetaryValue(String):boolean
    +convertValue(String):String
}

InventoryManagementApplicationController --o ParseTyping
@enduml